Fixed bad alignment of credits

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,11 +50,11 @@
   font-size: 0.75rem;
 }
 
-.credits {
+.credit {
   font-size: 0.75rem;
 }
 
-.credits ul {
+.credit ul {
   list-style: none;
 }
 
